Bah! Changed the ChatterObserver interface to take an iterator(), made our internal order be LRU so we blow users off the chatterlist in a smart way.
git-svn-id: svn+ssh://src.earth.threerings.net/narya/trunk@1622 542714f4-19e9-0310-aa3c-eee0fc999fb1